autodep8 (0.2) UNRELEASED; urgency=medium

  [ Antonio Terceiro ]
  * debian/control: add Vcs-* fields

  [ Martin Pitt ]
  * Switch maintainer to Autopkgtest team, and add myself as uploader, with
    Antonio's consent.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 14 Oct 2014 15:25:18 -0300

autodep8 (0.1) unstable; urgency=medium

  * Initial release.

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 20 Sep 2014 10:45:21 -0300