@@ -1,0 +1,7 @@
+#!/bin/sh
+
+set -eu
+
+grep-dctrl --quiet \
+    -FBuild-Depends,Build-Depends-Indep,Depends -e '(^| )dkms' \
+    -o -FPackage -e '\-dkms' debian/control
