@@ -1,0 +1,7 @@
+#!/bin/sh
+
+cat <<EOF
+Test-Command: /usr/lib/dkms/dkms-autopkgtest
+Restrictions: needs-root, allow-stderr
+Depends: dkms
+EOF
